[package]
name = "ghost2zola"
version = "0.1.0"
authors = ["tim"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html2md = "0.2.9"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
regex = "1"